@@ -4,3 +4,4 @@ _start:
 	bl far
 	bl near
 	bl far
+	b _start
