@@ -1,3 +1,8 @@
+2010-07-06  Alan Modra  <amodra@gmail.com>
+
+	* elf32-ppc.c (ppc_elf_relax_section): Insert branch around
+	trampolines only for .init and .fini sections.
+
 2010-07-05  Alan Modra  <amodra@gmail.com>
 
 	* elf32-ppc.c: Formatting.
